# lapack-example

./: .gitignore  README.md
src/: CMakeLists.txt  lapack-example.cpp
